--- a/media/css/styleguide/products-firefox-os.less
+++ b/media/css/styleguide/products-firefox-os.less
@@ -1,6 +1,6 @@
 @import "../styleguide/styleguide.less";
 
-/* {{{ Firefox OS icons */
+/* {{{ Firefox OS app icons */
 
 .firefox-os-icons {
     #basics {
@@ -79,13 +79,229 @@
             .span_guide(12);
         }
         .download-group {
-            .span_guide(2);
+            .span_guide(3);
             p {
                 margin-bottom: 0;
             }
         }
         #icon-circle {
             .span_guide(4);
+        }
+    }
+}
+
+/* }}} */
+/* {{{ Firefox OS action icons */
+
+.firefox-os-action-icons {
+    .swatch-card {
+        .span_guide(2);
+        position: relative;
+        text-align: center;
+        .swatch {
+            margin-bottom: @baseLine / 2;
+            float: none;
+            border-width: 5px;
+            height: 80px;
+            width: 80px;
+            margin: 0 25px 10px;
+            display: table;
+            text-align: center;
+            b {
+                line-height: 20px;
+                display: table-cell;
+                vertical-align: middle;
+                padding: 0 10px;
+            }
+        }
+        h4 {
+            margin-bottom: @baseLine / 4;
+            font-size: 20px;
+            small {
+                display: block;
+                letter-spacing: normal;
+                .open-sans;
+            }
+        }
+    }
+    #swatch-standard {
+        .swatch {
+            background-color: #fff;
+            color: @textColorPrimary;
+        }
+        margin-left: 0;
+    }
+    #swatch-dark {
+        .swatch { background-color: #2c393b; }
+    }
+    #swatch-favorite {
+        .swatch { #gradient > .vertical(#fccb00, #ff9500); }
+    }
+    #swatch-mark {
+        .swatch { background-color: #ec1313; }
+    }
+    #basics {
+        .divider-dark;
+        .clearfix;
+        .intro {
+            h2 {
+                .span_guide(3);
+                margin-bottom: @baseLine;
+            }
+            p {
+                .span_guide(9);
+                margin-bottom: @baseLine;
+            }
+        }
+        #color,
+        #shadow {
+            .span_guide(9);
+            .offset_guide(3);
+            h3 {
+                margin-bottom: @baseLine;
+            }
+        }
+        #shadow {
+            .headers,
+            .buttons,
+            .light {
+                .span_guide(4);
+                figure {
+                    width: auto;
+                    margin: 0 auto @baseLine auto;
+                    img {
+                        float: left;
+                        .span_guide(2);
+                        margin-left: 0;
+                    }
+                    div {
+                        .span_guide(2);
+                        margin-right: 0;
+                        padding-top: 15px;
+                        li {
+                            list-style-type: none;
+                            margin-left: 0;
+                            font-size: @smallFontSize;
+                            color: @darkThemeText;
+                        }
+                    }
+                }
+            }
+            .headers {
+                margin-left: 0;
+            }
+            .buttons {
+                margin-right: 0;
+            }
+            .light {
+                margin-left: 0;
+                clear: left;
+            }
+        }
+    }
+    #design {
+        .divider-dark;
+        .clearfix;
+        h2 {
+            .span_guide(3);
+            margin-bottom: @baseLine;
+        }
+        .intro {
+            .span_guide(9);
+            margin-bottom: @baseLine;
+        }
+        #color,
+        #shadow {
+            .span_guide(9);
+            .offset_guide(3);
+            h3 {
+                margin-bottom: @baseLine;
+            }
+        }
+    }
+    #conventions {
+        .divider-dark;
+        .clearfix;
+        h2 {
+            .span_guide(3);
+            margin-bottom: @baseLine;
+        }
+        .intro {
+            .span_guide(9);
+            margin-bottom: @baseLine;
+        }
+        .sub-section {
+            padding-bottom: @baseLine * 2;
+        }
+        #arrows {
+            .clearfix;
+            figure {
+                .span_guide(2);
+                text-align: center;
+                img {
+                    margin: 0 auto;
+                }
+                small {
+                    display: block;
+                }
+                &.first {
+                    margin-left: 0;
+                }
+                &#arrows-transfer {
+                    .span_guide(4);
+                }
+            }
+        }
+    }
+    #blocks {
+        .divider-dark;
+        .clearfix;
+        h2 {
+            .span_guide(3);
+            margin-bottom: @baseLine;
+        }
+        .intro {
+            .span_guide(9);
+            margin-bottom: @baseLine;
+        }
+        figure {
+            .span_guide(2);
+            text-align: center;
+            img {
+                margin: 0 auto;
+            }
+            &.first {
+                margin-left: 0;
+            }
+        }
+        .common-icons {
+            .clearfix;
+            margin-bottom: @baseLine * 2;
+        }
+    }
+    #examples {
+        .clearfix;
+        .divider-dark;
+        margin-bottom: @baseLine * 2;
+        h2 {
+            .span_guide(12);
+            margin-bottom: @baseLine;
+        }
+        figure {
+            .span_guide(4);
+            img {
+                margin-top: @baseLine / 2;
+            }
+        }
+    }
+    #action-downloads {
+        .clearfix;
+        .intro {
+            .span_guide(3);
+            margin-bottom: @baseLine;
+        }
+        .download-group {
+            .span_guide(3);
         }
     }
 }
